Add bam input path to file_layout.yaml

--- a/config/file_layout.yaml
+++ b/config/file_layout.yaml
@@ -17,6 +17,7 @@ annot:
 ## INGEST
 input:
     input_fastq: "{{sample}}_{read}.fastq.gz"
+    input_bam: "{sample}_input.bam"
 cutadapt:
     cutadapt_fastq: "{{sample}}_{read}"
 rqual_filter:
