--- a/config/file_layout.yaml
+++ b/config/file_layout.yaml
@@ -13,7 +13,9 @@ annot:
     gtf: "GCA_000001405.15_GRCh38_full_analysis_set.refseq_annotation.gtf"
     bed: "GCA_000001405.15_GRCh38_full_analysis_set.refseq_annotation.bed"
     bw: "hg38.phastCons100way.bw"
-    
+    refseq_bed: "hg38_RefSeq.bed"
+    housekeeping_bed: "hg38.HouseKeepingGenes.bed"
+
 ## INGEST
 input:
     input_fastq: "{{sample}}_{read}.fastq.gz"
@@ -44,11 +46,29 @@ bam:
     metrics: "{sample}_marked_duplicates_metrics.txt"
     sampled_bam: "{sample}_sampled.bam"
     sampled_index: "{sample}_sampled.bam.bai"
+    stats: "{sample}_sorted_bam_stats.txt"
+    size: "{sample}_bam_size.txt"
+    downsampled_bam: "{sample}_downsampling.bam"
+    downsampled_bai: "{sample}_downsampling.bam.bai"
+    housekeeping_bam: "{sample}_housekeeping.bam"
+    housekeeping_bai: "{sample}_housekeeping.bam.bai"
 
 rseqc:
     bamqc_txt: "{sample}_bam_qc.txt"
     bamgc_txt: "{sample}_bam_gc.txt"
     bamgc_r: "{sample}.GC_plot.r"
+    ts_txt: "tin_score/{sample}_downsampling.summary.txt"
+    ts_xls: "tin_score/{sample}_downsampling.tin.xls"
+    ts_txt_hk: "tin_score/{sample}_housekeeping.summary.txt"
+    ts_xls_hk: "tin_score/{sample}_housekeeping.tin.xls"
+    rd_txt: "read_distribution/{sample}_read_distrib.txt"
+    gbc_png: "gene_body_coverage/{sample}.geneBodyCoverage.curves.png"
+    gbc_r: "gene_body_coverage/{sample}.geneBodyCoverage.r"
+    gbc_txt: "gene_body_coverage/{sample}.geneBodyCoverage.txt"
+    js_plot: "junction_saturation/{sample}.junctionSaturation_plot.pdf"
+    js_r: "junction_saturation/{sample}.junctionSaturation_plot.r"
+    is_txt: "insert_size/{sample}_insert_size_metrics.txt"
+    is_pdf: "insert_size/{sample}_insert_size_histogram.pdf"
 
 fastqc:
     targz: "{sample}_filtered_fastqc.tar.gz"
