Updates in progress for using hisat2 aligner

--- a/envs/hisat2.yaml
+++ b/envs/hisat2.yaml
@@ -1,7 +1,7 @@
-name: bwa
+name: hisat2
 channels:
     - conda-forge
     - bioconda
 dependencies:
-    - bwa==0.7.17
+    - hisat2==2.2.1
     - samtools==1.18
