--- a/config/file_layout.yaml
+++ b/config/file_layout.yaml
@@ -14,6 +14,7 @@ annot:
     bw: "hg38.phastCons100way.bw"
     refseq_bed: "hg38_RefSeq.bed"
     housekeeping_bed: "hg38.HouseKeepingGenes.bed"
+    lib: "GRCh38_gencode_v22_CTAT_lib_Mar012021.STAR_v2.7.11a.plug-n-play"
 
 ## INGEST
 input:
@@ -72,3 +73,6 @@ rseqc:
 fastqc:
     targz: "{sample}_filtered_fastqc.tar.gz"
 
+fusion:
+    tsv: "{sample}_fusion_predictions.tsv"
+    tsv_abridged: "{sample}_fusion_predictions.abridged.tsv"
