Updated immune response and repertorie modules; the modules DO NOT WORK how they are now, so they were commented out

--- a/config/file_layout.yaml
+++ b/config/file_layout.yaml
@@ -82,9 +82,9 @@ fusion:
 
 immune_response:
     msisensor2_models: "models_hg38"
-    msisensor2: "msisensor2/{sample}_msisensor2",
-    msisensor2_txt: "msisensor2/{sample}_msisensor2.txt",
-    msisensor2_dis: "msisensor2/{sample}_msisensor2_dis",
+    msisensor2: "msisensor2/{sample}_msisensor2"
+    msisensor2_txt: "msisensor2/{sample}_msisensor2.txt"
+    msisensor2_dis: "msisensor2/{sample}_msisensor2_dis"
     msisensor2_somatic: "msisensor2/{sample}_msisensor2_somatic"
         
 immune_repertoire:
