Perform code cleanup including removal of unused rules, changing final directory locations, and producing env list files

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,10 @@
 ## workflow set up
 # working output dir
-predir: '/media/analysis/rnaseq_output'
+predir: '/media/analysis/rnaseq_refine'
 # source dir for supporting scripts
 srcdir: '/home/trivittge_nih_gov/cidc_rnaseq/source'
 # file to write running log
-log_file: '/media/analysis/rnaseq_output/pipeline.log'
+log_file: '/media/analysis/rnaseq_refine/pipeline.log'
 # number of CPU cores dedicated to entire workflow
 ncores: 16
 
@@ -14,11 +14,11 @@ file_layout: 'config/file_layout.yaml'
 
 
 ## reference genome download locations file
-reference: 'config/reference_dev.csv'
+reference: 'config/reference.csv'
 
 
 ## sample metadata file
-sample_metadata: 'config/sample_metadata_dev.csv'
+sample_metadata: 'config/sample_metadata.csv'
 
 
 ## preprocess options
