--- a/envs/bedtools.yaml
+++ b/envs/bedtools.yaml
@@ -1,6 +1,6 @@
-name: samtools
+name: bedtools
 channels:
     - conda-forge
     - bioconda
 dependencies:
-    - samtools==1.19.2
+    - bedtools==2.31.1
