--- a/envs/picard.yaml
+++ b/envs/picard.yaml
@@ -1,6 +1,6 @@
-name: samtools
+name: picard
 channels:
     - conda-forge
     - bioconda
 dependencies:
-    - samtools==1.19.2
+    - picard==3.1.1
