Update the RSeQC gene model beds to match Gencode version 37. Add thread option in samtools index command for rule housekeeping_bam

--- a/config/file_layout.yaml
+++ b/config/file_layout.yaml
@@ -3,8 +3,8 @@ ref_files:
     fa: "GRCh38.primary_assembly.genome.fa"
     fai: "GRCh38.primary_assembly.genome.fa.fai"
     gtf: "gencode.v37.annotation.gtf"
-    refseq_bed: "hg38_RefSeq.bed"
-    housekeeping_bed: "hg38.HouseKeepingGenes.bed"
+    comp_bed: "gencode.v37.comprehensive.bed"
+    housekeeping_bed: "gencode.v37.housekeeping_genes.bed"
     tar: "p_compressed+h+v.tar.gz"
     idx: "p_compressed+h+v.3.cf"
     models: "models_hg38"
